Team content added

--- a/about/index.html
+++ b/about/index.html
@@ -40,6 +40,17 @@
 			<link rel="icon" type="image/jpeg" href="/assets/icon-bro-CankwgKx.jpeg">
 	<title>About &#8211; Duradars</title>
 	<meta name='robots' content='max-image-preview:large' />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Special+Gothic&display=swap" rel="stylesheet">
+<style>
+	.myFont{
+		font-family: "Special Gothic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+</style>
+
 	<style>
 		img:is([sizes="auto" i], [sizes^="auto," i]) {
 			contain-intrinsic-size: 3000px 1500px
@@ -938,7 +949,7 @@
 
 					<div class="elementor-element elementor-element-382969c elementor-widget elementor-widget-text-editor"
 						data-id="382969c" data-element_type="widget" data-widget_type="text-editor.default">
-						<div class="elementor-widget-container" style="color: white; text-align: justify;">
+						<div class="elementor-widget-container myFont" style="text-align: justify;">
 							<p>At Duradars, we believe that in a world that's constantly evolving online, your digital security should never be an afterthought.</p>
 							<p>Founded in 2025, Duradars was born out of a simple yet powerful idea: to help individuals, businesses, and organizations protect what matters most in the digital space — their data, systems, and peace of mind.</p>
 							<p>We're a team of cybersecurity experts, tech enthusiasts, and problem-solvers driven by a shared mission: to make the digital world safer, one solution at a time. Whether it's defending against cyber threats, securing sensitive information, or building resilient systems, we work closely with our clients to deliver practical, future-ready cybersecurity services tailored to their needs.</p>
