--- a/team/index.html
+++ b/team/index.html
@@ -43,6 +43,17 @@
 	<title>Team &#8211; Duradars</title>
 	<link rel="stylesheet" href="/assets/font-awesome-pro-master/css/all.min.css">
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Special+Gothic&display=swap" rel="stylesheet">
+<style>
+	.myFont{
+		font-family: "Special Gothic", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+</style>
+
 	<meta name='robots' content='max-image-preview:large' />
 	<style>
 		img:is([sizes="auto" i], [sizes^="auto," i]) {
@@ -750,6 +761,13 @@
 				background-image: none !important;
 			}
 		}
+		
+		@media (width > 1024px) {
+			.my-team-card{
+				max-width: 300px;
+			}
+		}
+
 	</style>
 </head>
 
@@ -921,6 +939,54 @@
 		</div>
 		<div class="elementor-element elementor-element-ae1b89f e-flex e-con-boxed e-con e-parent" data-id="ae1b89f"
 			data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
+
+			<div class="e-con-inner" style="padding-bottom: 0;">
+				<div class="elementor-element elementor-element-59322ae e-con-full e-flex e-child" data-id="59322ae"
+					data-element_type="container" style="padding: 0;">
+					
+
+					<div class="elementor-element elementor-element-382969c elementor-widget elementor-widget-text-editor"
+						data-id="382969c" data-element_type="widget" data-widget_type="text-editor.default">
+						<div class="elementor-widget-container myFont" style="text-align: justify; color: #99999D;">
+							<h2 style="line-height: 10px;"><span style="font-weight: 700; color: #0693e3;">Meet the Duradars Team</span><br><h4 style="color: white;">Your Cybersecurity Dream Team</h4></h2>
+							<p>At Duradars, we're more than just cybersecurity experts—we're your digital bodyguards. Our team brings together top-tier talent from the worlds of ethical hacking, risk management, compliance, and threat intelligence, all with one goal: keeping you safe in a connected world.</p>
+							<p>We combine deep technical expertise with a human-first approach. No jargon. No scare tactics. Just a team that's got your back—24/7.</p>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">👨‍💻 The White-Hat Warriors</h5>
+								<p>Our ethical hackers and VAPT specialists think like attackers—so they can protect you better. They dig deep into your systems to find and fix vulnerabilities before the bad guys do.</p>
+							</div>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">📊 The Compliance Navigators</h5>
+								<p>GDPR? HIPAA? PCI DSS? No problem. Our compliance pros make complex regulations simple, helping you meet industry standards without the headaches.</p>
+							</div>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">🕵‍♀ The Threat Hunters</h5>
+								<p>Our OSINT and threat intelligence analysts monitor the dark corners of the web, catching risks before they reach you. If there's a threat out there, we'll see it first.</p>
+							</div>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">🌐 The Always-On Defenders</h5>
+								<p>With our 24/7 monitoring crew, you're never left in the dark. They're watching your digital perimeter day and night, responding fast to anything suspicious.</p>
+							</div>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">🧠 The Cyber Educators</h5>
+								<p>We believe your team is your first line of defense. Our training experts turn everyday users into savvy defenders who know how to spot and stop threats.</p>
+							</div>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">🔐 The Data Guardians</h5>
+								<p>Your privacy matters. Our encryption and data protection team ensures your most valuable data is locked down like Fort Knox—and only accessible to those who need it.</p>
+							</div>
+							<div style="padding: 7px 20px;">
+								<h5 style="font-weight: 400; color: #ffffff; line-height: 0;">Why We're Different</h5>
+							<p>We're not here to scare you—we're here to empower you. At Duradars, we turn complex cybersecurity challenges into clear, manageable solutions. We speak your language, we listen, and we care.</p>
+							</div>
+							<p style="color: white;">Cybersecurity isn't just our job—it's our mission.</p>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
 			<div class="e-con-inner">
 				<div class="elementor-element elementor-element-59f1c8c e-con-full e-flex e-con e-child" data-id="59f1c8c"
 					data-element_type="container">
@@ -1125,16 +1191,16 @@
 				</div>
 				<div class="elementor-element elementor-element-d7e64dd e-con-full e-flex e-con e-child" data-id="d7e64dd"
 					data-element_type="container">
-					<div class="elementor-element elementor-element-656b98d e-con-full e-flex e-con e-child" data-id="656b98d"
-						data-element_type="container" style="max-width: 300px;">
-						<!-- <div
+					<div class="elementor-element elementor-element-656b98d e-con-full e-flex e-con e-child my-team-card" data-id="656b98d"
+						data-element_type="container">
+						<div
 							class="elementor-element elementor-element-8bf40b6 elementor-shape-circle elementor-grid-1 elementor-absolute e-grid-align-center elementor-widget elementor-widget-social-icons"
 							data-id="8bf40b6" data-element_type="widget" data-settings="{&quot;_position&quot;:&quot;absolute&quot;}"
 							data-widget_type="social-icons.default">
 							<div class="elementor-widget-container">
 								<div class="elementor-social-icons-wrapper elementor-grid">
 									<span class="elementor-grid-item">
-										<a href="#"
+										<a href="https://www.linkedin.com/in/aneel-k-3aa329129/"
 											class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-d58555c"
 											target="_blank">
 											<span class="elementor-screen-only">Linkedin</span>
@@ -1143,7 +1209,7 @@
 									</span>
 								</div>
 							</div>
-						</div> -->
+						</div>
 						<div class="elementor-element elementor-element-504f360 elementor-widget elementor-widget-image"
 							data-id="504f360" data-element_type="widget" data-widget_type="image.default">
 							<div class="elementor-widget-container">
@@ -1174,8 +1240,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="elementor-element elementor-element-a3b14ae e-con-full e-flex e-con e-child" data-id="a3b14ae"
-						data-element_type="container" style="max-width: 300px;">
+					<div class="elementor-element elementor-element-a3b14ae e-con-full e-flex e-con e-child my-team-card" data-id="a3b14ae"
+						data-element_type="container">
 						<!-- <div
 							class="elementor-element elementor-element-8bf40b6 elementor-shape-circle elementor-grid-1 elementor-absolute e-grid-align-center elementor-widget elementor-widget-social-icons"
 							data-id="8bf40b6" data-element_type="widget" data-settings="{&quot;_position&quot;:&quot;absolute&quot;}"
